removed z-index from the header no longer needed

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -59,7 +59,6 @@ header {
     padding: 10px 0;
     position: fixed;
     width: 100%;
-    z-index: 1;
 }
 
 header.scrolled {
